[package]
name = "win-tcp-proxy"
version = "0.1.0"
edition = "2021"
description = "Simple TCP Proxy Service"
authors = ["K.J. Valencik"]
license = "MIT"

[[bin]]
name = "tcp-proxy"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "sync"] }
windows-service = "0.6"
